fixed drawer blur at edge and fixed blurry text by removing will-change property from drawer

--- a/src/App.css
+++ b/src/App.css
@@ -361,7 +361,6 @@ header nav button {
   height: 100vh;
   background: #fff;
   left: 100vw;
-  will-change: transform, opacity;
 }
 
 .drawer-closed {
@@ -386,20 +385,22 @@ header nav button {
   height: 100vh;
   backdrop-filter: blur(3px);
   top:0;
-  left: 0;
+  left: -155px;
 }
 
 .glass-fadeIn {
   opacity: 1;
+  transform: translateX(-155px);
   z-index: 19;
-  transition: opacity 500ms cubic-bezier(0.5,0,0,0.75), z-index 0ms;
+  transition: opacity 500ms cubic-bezier(0.5,0,0,0.75), transform 500ms cubic-bezier(0.5,0,0,0.75), z-index 0ms;
 }
 
 
 .glass-fadeOut {
   opacity: 0;
+  transform: translateX(0);
   z-index: -11;
-  transition: opacity 500ms cubic-bezier(0.5,0,0,0.75), z-index 0ms 500ms;
+  transition: opacity 500ms cubic-bezier(0.5,0,0,0.75), transform 500ms cubic-bezier(0.5,0,0,0.75), z-index 0ms 500ms;
 }
 
 .x-icon-container {
